Some small tweaks in the footer

--- a/src/footer.scss
+++ b/src/footer.scss
@@ -11,12 +11,8 @@
     width: 100%;
     z-index: 10;
 
-    img {
+    .conf-logo {
         position: absolute;
-        right: 0px;
-        top: 0px;
-    }
-    p {
-        margin: 0px 0px;
+        right: 25px;
     }
 }
