--- a/src/background.scss
+++ b/src/background.scss
@@ -1,4 +1,4 @@
 .reveal {
-    background: url("../img/background.png") no-repeat center center fixed;
+    background: url("./img/background.png") no-repeat center center fixed;
     background-size: cover;
 }
