Make headings a little bit smaller

--- a/src/main.scss
+++ b/src/main.scss
@@ -19,6 +19,10 @@ $headingFont: 'Montserrat', sans-serif;
 $headingColor: $mainText;
 $headingTextShadow: none;
 $headingTextTransform: none;
+$heading1Size: 3.0em;
+$heading2Size: 2.0em;
+$heading3Size: 1.5em;
+$heading4Size: 1.0em;
 $backgroundColor: none;
 $linkColor: $linkText;
 $linkColorHover: lighten($linkColor, 20%);
