--- a/src/printing.scss
+++ b/src/printing.scss
@@ -5,6 +5,10 @@
     background: none;    
     color: $primaryDark;
 
+    em, strong {
+        color: $primaryDark;
+    }
+
     h1, h2, h3, h4, h5, h6 {
         color: $primaryDark;
     }
