Display headers in small caps

--- a/src/content.scss
+++ b/src/content.scss
@@ -5,6 +5,10 @@
     }
 
     section {
+        h1, h2, h3, h4 {
+            font-variant: small-caps;
+        }
+        
         img, video, iframe {
             border: none;
             max-width: 95%;
