Tables shouldn't be centered on a slide

--- a/src/content.scss
+++ b/src/content.scss
@@ -16,6 +16,10 @@
         }
     }
 
+    table {
+        margin: 0;
+    }
+
     /* Ensure text is aligned to the left */
     .slides {
         text-align: left;
