--- a/src/main.scss
+++ b/src/main.scss
@@ -24,7 +24,7 @@ $heading2Size: 2.0em;
 $heading3Size: 1.5em;
 $heading4Size: 1.0em;
 $backgroundColor: none;
-$linkColor: $linkText;
+$linkColor: $accentColor;
 $linkColorHover: lighten($linkColor, 20%);
 $mainFontSize: 30px;
 $selectionBackgroundColor: rgba(0, 0, 0, 0.99);
