--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,5 +1,7 @@
 $accentColor:     #dfc12a;
 $linkText:        #868686;
 $mainText:        #ffffff;
-$primaryDark:     #000064;
-$primaryLight:    #002fac;
+$primaryDark:     #000033;
+$primaryLight:    #001f74;
+$secondaryDark:   #000033;
+$secondaryLight:  #6d6d6d;
