--- a/src/footer.scss
+++ b/src/footer.scss
@@ -1,7 +1,7 @@
 @import "./colors.scss";
 
 .reveal .footer {
-    background-image: linear-gradient(to right, $primaryLight, $primaryDark);
+    background-image: linear-gradient(to right, $secondaryLight, $secondaryDark);
     background-position: center top;
     bottom: 0px;
     font-size: 0.75em;
@@ -12,9 +12,14 @@
     width: 100%;
     z-index: 10;
 
-    .conf-logo {
-        position: absolute;
-        padding-right: 20px;
-        right: 25px;
+    .conference {
+        float: left;
+        height: 28px;
+        margin-top: -2px;
+    }
+    
+    .speaker {
+        float: right;
+        margin-right: 35px;
     }
 }
