Fix display of multiple quotes in one slide deck

--- a/src/quotes.scss
+++ b/src/quotes.scss
@@ -3,7 +3,7 @@
 .reveal blockquote {
     border-left: 10px solid $mainText;
     padding: 0.5em 10px;
-    quotes: "\201C" "\201D" "\201C" "\201D";
+    quotes: "\201C" "\201C";
     font-size: 1.25em;
     display: inline-block;
     text-align: left;
